# homomorphine

./: .codedocs  .gitattributes  CMakeLists.txt  README.md
config/: devel.json
golang/examples/: homomorphine_rest_api.go
native/: CMakeLists.txt  Doxyfile  Doxyfile.in
native/docs/html/: annotated.html  api_8hpp_source.html  backend_8hpp_source.html  backend__factory_8hpp_source.html  clang__backend__interface_8hpp_source.html  clang__types_8hpp_source.html  classes.html  classhomomorphine_1_1_api-members.html  classhomomorphine_1_1_api.html  classhomomorphine_1_1_api_response-members.html  classhomomorphine_1_1_api_response.html  classhomomorphine_1_1_backend-members.html  classhomomorphine_1_1_backend.html  classhomomorphine_1_1_backend_exception-members.html  classhomomorphine_1_1_backend_exception.html  classhomomorphine_1_1_backend_factory-members.html  classhomomorphine_1_1_backend_factory.html  classhomomorphine_1_1_backend_factory_exception-members.html  classhomomorphine_1_1_backend_factory_exception.html  classhomomorphine_1_1_backend_operation_not_supported-members.html  classhomomorphine_1_1_backend_operation_not_supported.html  classhomomorphine_1_1_config-members.html  classhomomorphine_1_1_config.html  classhomomorphine_1_1_constants-members.html  classhomomorphine_1_1_constants.html  classhomomorphine_1_1_h_e_lib_backend-members.html  classhomomorphine_1_1_h_e_lib_backend.html  classhomomorphine_1_1_interface-members.html  classhomomorphine_1_1_interface.html  classhomomorphine_1_1_seal_backend-members.html  classhomomorphine_1_1_seal_backend.html  classhomomorphine_1_1_server-members.html  classhomomorphine_1_1_server.html  classhomomorphine_1_1_util-members.html  classhomomorphine_1_1_util.html  config_8hpp_source.html  constants_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  (+13 more)
native/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  searchdata.js  variables_0.js
native/docs/latex/: annotated.tex  classhomomorphine_1_1_api.tex  classhomomorphine_1_1_api_response.tex  classhomomorphine_1_1_backend.eps  classhomomorphine_1_1_backend.tex  classhomomorphine_1_1_backend_exception.eps  classhomomorphine_1_1_backend_exception.tex  classhomomorphine_1_1_backend_factory.tex  classhomomorphine_1_1_backend_factory_exception.eps  classhomomorphine_1_1_backend_factory_exception.tex  classhomomorphine_1_1_backend_operation_not_supported.eps  classhomomorphine_1_1_backend_operation_not_supported.tex  classhomomorphine_1_1_config.tex  classhomomorphine_1_1_constants.tex  classhomomorphine_1_1_h_e_lib_backend.eps  classhomomorphine_1_1_h_e_lib_backend.tex  classhomomorphine_1_1_interface.tex  classhomomorphine_1_1_seal_backend.eps  classhomomorphine_1_1_seal_backend.tex  classhomomorphine_1_1_server.tex  classhomomorphine_1_1_util.tex  hierarchy.tex  refman.tex  structlong__array__t.tex
native/src/: api.cpp  api.hpp  arithmetic_backend.cpp  arithmetic_backend.hpp  arithmetic_backend_factory.cpp  arithmetic_backend_factory.hpp  backend.cpp  backend.hpp  backend_factory.cpp  backend_factory.hpp  boolean_circuit_backend.hpp  boolean_circuit_backend_factory.cpp  boolean_circuit_backend_factory.hpp  clang_arithmetic_backend_interface.cpp  clang_arithmetic_backend_interface.hpp  clang_backend_interface.cpp  clang_backend_interface.hpp  clang_boolean_circuit_backend_interface.cpp  clang_boolean_circuit_backend_interface.hpp  clang_interface.cpp  clang_interface.hpp  clang_seal_interface.cpp  clang_seal_interface.hpp  clang_types.hpp  config.cpp  config.hpp  constants.cpp  constants.hpp  helib_backend.cpp  helib_backend.hpp  homomorphine.cpp  info.hpp.in  interface.hpp  seal_backend.cpp  seal_backend.hpp  server.cpp  server.hpp  tfhe_backend.cpp  tfhe_backend.hpp  util.cpp  (+1 more)
native/test/: test_arithmetic_backend.cpp  test_arithmetic_clang_interface.cpp  test_backend.cpp  test_boolean_circuit_backend.cpp  test_boolean_circuit_clang_interface.cpp  test_clang_interface.cpp  test_seal_backend.cpp  test_util.cpp
src/: Morphine.cxx  Options.cxx  Options.hpp  api.cpp  api.hpp  backend.cpp  backend.hpp  backend_factory.cpp  backend_factory.hpp  config.cpp  config.h  config.hpp  constants.cpp  constants.hpp  homomorphine.cpp  info.h.in  info.hpp  info.hpp.in  interface.cpp  interface.hpp  morphine.cpp  options.cpp  options.h  seal_backend.cpp  seal_backend.hpp  server.cpp  server.h  server.hpp
test/: seal_backend_test.cpp  test_seal_backend.cpp
